updated html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Prasad Somvanshi</h1>
+    <h1 align="center" >Prasad Somvanshi</h1>
+    <img src="img.jpg">
+    <h2>aditya gondkar</h2>
     
 </body>
 </html>
