--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1 align="center" >Prasad Somvanshi</h1>
     <img src="img.jpg">
     <h2>aditya gondkar</h2>
+    <p>Heloo world
+        
+    </p>
     
 </body>
 </html>
