--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 align="center" >Prasad Somvanshi</h1>
-    <img src="img.jpg">
+    <img src="Img.jpg">
     <h2>aditya gondkar</h2>
     <p>Heloo world
         
