--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 </head>
 <body>
     <h1 align="center" >Prasad Somvanshi</h1>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.dreamstime.com%2Fphotos-images%2Fnature.html&psig=AOvVaw06tvi5M3yb23kGFrkMo48H&ust=1692943616928000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCKjxlsjQ9IADFQAAAAAdAAAAABAE">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.dreamstime.com%2Fphotos-images%2Fnature.html&psig=AOvVaw06tvi5M3yb23kGFrkMo48H&ust=1692943616928000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCKjxlsjQ9IADFQAAAAAdAAAAABAE ">
     <h2>aditya gondkar</h2>
-    <p>Heloo world
-        
-    </p>
+    <p>Heloo world</p>
+
+    <ol>
+        <li>Prasad</li>
+        <li>Aditya</li>
+        <li>Tejas</li>
+    </ol>
     
 </body>
 </html>
